--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -34,7 +34,7 @@ blockquote, q {
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
+	content: "";
 	content: none;
 }
 table {
@@ -44,7 +44,7 @@ table {
 body {
 	font-size: 13px;
 	line-height: 1.5;
-	font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, serif;
 	color: #000;
 }
 
@@ -215,7 +215,7 @@ footer a {
 /* MISC */
 .clearfix:after {
 	clear: both;
-	content: '.';
+	content: ".";
 	display: block;
 	visibility: hidden;
 	height: 0;
